clusters/pi-cluster/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: monitoring-ingress
    namespace: monitoring
spec:
    rules:
        - host: "cluster-worker01.local"
          http:
              paths:
                  - pathType: Prefix
                    path: "/prometheus"
                    backend:
                        service:
                            name: prometheus-kube-prometheus-prometheus
                            port:
                                number: 9090
                  - pathType: Prefix
                    path: "/grafana"
                    backend:
                        service:
                            name: prometheus-grafana
                            port:
                                number: 80
