clusters/pi-cluster/traefik-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
    name: traefik-dashboard
    namespace: kube-system
    labels:
        app.kubernetes.io/instance: traefik
        app.kubernetes.io/name: traefik-dashboard
spec:
    type: ClusterIP
    ports:
        - name: traefik
          port: 9000
          targetPort: traefik
          protocol: TCP
    selector:
        app.kubernetes.io/instance: traefik
        app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: traefik-ingress
    namespace: kube-system
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    ingressClassName: traefik
    rules:
        - http:
              paths:
                  - path: /traefik
                    pathType: Prefix
                    backend:
                        service:
                            name: traefik-dashboard
                            port:
                                number: 9000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: traefik-dashboard-redirect
    namespace: kube-system
spec:
    redirectRegex:
        regex: http:\/\/[^]+\/traefik
        replacement: http://traefik-dashboard/dashboard/
